# TX-doccument

maindocument2/client1/include/: ChatView.h  ClientSession.h  FileTransferManager.h
maindocument2/client1/src/: CMakeLists.txt  ClientSession.cpp  FileTransferManager.cpp  JoinRoomView.cpp  MainMenuView.cpp
maindocument2/server1/include/: protocol.h
maindocument2/server1/src/: RoomHandler.cpp  Server.cpp  Session.cpp  protocol.cpp
maindocument3/clent5/include/: Client.h  ClientSession.h  FileTransferManager.h  MainMenuView.h  Protocol.h  Renderer.h
maindocument3/clent5/src/: Client.cpp  ClientSession.cpp  UIManager.cpp  main.cpp
maindocument3/server5/include/: FileTransfer.h  Message.h  Room.h  RoomHandler.h  Session.h  protocol.h
maindocument3/server5/src/: FileTransfer.cpp  Message.cpp  Room.cpp  main.cpp
servermain/clentmain/include/: AppState.h  Application.h  ClientSession.h  FileTransferManager.h  JoinRoomView.h  Protocol.h  UIManager.h  Window.h
servermain/clentmain/src/: Application.cpp  CMakeLists.txt  ChatView.cpp  ClientSession.cpp  FileTransferManager.cpp  Renderer.cpp  Window.cpp  main.cpp
servermain/include/: FileTransfer.h  Room.h  Server.h  Session.h  protocol.h
servermain/src/: CMakeLists.txt  Room.cpp  Session.cpp
